@@ -3,7 +3,9 @@ package r01f.types.datetime;
 import java.io.Serializable;
 import java.util.Calendar;
 import java.util.Date;
+import java.util.Iterator;
 
+import org.apache.commons.lang3.StringUtils;
 import org.joda.time.DateTime;
 import org.joda.time.LocalDate;
 
@@ -21,39 +23,45 @@ import r01f.util.types.Strings;
 @MarshallType(as="dayOfMonth")
 @GwtIncompatible
 @Accessors(prefix="_")
-public class DayOfMonth 
+public class DayOfMonth
   implements Serializable,
   			 CanBeRepresentedAsString,
   			 Comparable<DayOfMonth> {
 
 	private static final long serialVersionUID = 7658275370612790932L;
 /////////////////////////////////////////////////////////////////////////////////////////
-//  
+//
 /////////////////////////////////////////////////////////////////////////////////////////
 	@Getter private final int _dayOfMonth;
+
 /////////////////////////////////////////////////////////////////////////////////////////
-//  
+//  REGEX
+/////////////////////////////////////////////////////////////////////////////////////////
+	public static final String REGEX = "(0[1-9]|[12]\\d|3[01])";	// do not match 32, etc
+	public static final String REGEX_NOCAPTURE = "(?:0[1-9]|[12]\\d|3[01])";
+/////////////////////////////////////////////////////////////////////////////////////////
+//
 /////////////////////////////////////////////////////////////////////////////////////////
    public static boolean canBe(final String str) {
-         return Strings.isNOTNullOrEmpty(str) 
+         return Strings.isNOTNullOrEmpty(str)
              && Numbers.isInteger(str)
              && Integer.parseInt(str) >= 1 && Integer.parseInt(str) <= 31;
    }
 /////////////////////////////////////////////////////////////////////////////////////////
-//  
+//
 /////////////////////////////////////////////////////////////////////////////////////////
 	public DayOfMonth(final int dayOfMonth) {
 		_check(dayOfMonth);
-		_dayOfMonth = dayOfMonth;	
+		_dayOfMonth = dayOfMonth;
 	}
 	public DayOfMonth(final Integer dayOfMonth) {
 		_check(dayOfMonth);
-		_dayOfMonth = dayOfMonth;	
+		_dayOfMonth = dayOfMonth;
 	}
-	public DayOfMonth(final String dayOfMonthStr) { 
+	public DayOfMonth(final String dayOfMonthStr) {
 		int dayOfMonth = Integer.parseInt(dayOfMonthStr);
 		_check(dayOfMonth);
-		_dayOfMonth = dayOfMonth;	
+		_dayOfMonth = dayOfMonth;
 	}
 	public static DayOfMonth of(final String dayOfMonth) {
 		return new DayOfMonth(dayOfMonth);
@@ -73,14 +81,20 @@ public class DayOfMonth
 	public static DayOfMonth valueOf(final String dayOfMonth) {
 		return new DayOfMonth(dayOfMonth);
 	}
+	public static DayOfMonth from(final String dayOfMonth) {
+		return new DayOfMonth(dayOfMonth);
+	}
 	public static DayOfMonth fromString(final String dayOfMonth) {
 		return new DayOfMonth(dayOfMonth);
+	}
+	public static DayOfMonth now() {
+		return DayOfMonth.of(new Date());
 	}
 	private static void _check(final int dayOfMonth) {
 		Preconditions.checkArgument(dayOfMonth <= 31 || dayOfMonth > 0,"Not a valid day of month");
 	}
 /////////////////////////////////////////////////////////////////////////////////////////
-//  
+//
 /////////////////////////////////////////////////////////////////////////////////////////
 	@Override
 	public String toString() {
@@ -89,6 +103,9 @@ public class DayOfMonth
 	@Override
 	public String asString() {
 		return this.toString();
+	}
+	public String asStringPaddedWithZero() {
+		return StringUtils.leftPad(this.asString(),2,'0');
 	}
 	public int asInteger() {
 		return _dayOfMonth;
@@ -99,10 +116,10 @@ public class DayOfMonth
 	public static boolean isValidDayOfMonth(final Year year,final MonthOfYear monthOfYear,final DayOfMonth dayOfMonth) {
 		LocalDate localDate = new LocalDate(year.asInteger(),monthOfYear.asInteger(),1);
 		int dayOfMonthMaxValue = localDate.dayOfMonth().getMaximumValue();
-		return dayOfMonthMaxValue <= dayOfMonth.asInteger();		
+		return dayOfMonthMaxValue <= dayOfMonth.asInteger();
 	}
 /////////////////////////////////////////////////////////////////////////////////////////
-//  
+//
 /////////////////////////////////////////////////////////////////////////////////////////
 	public boolean is(final DayOfMonth other) {
 		return _dayOfMonth == other.asInteger();
@@ -123,6 +140,38 @@ public class DayOfMonth
 		return _dayOfMonth >= other.asInteger();
 	}
 /////////////////////////////////////////////////////////////////////////////////////////
+// 	ITERABLE
+/////////////////////////////////////////////////////////////////////////////////////////
+	public static Iterable<DayOfMonth> dayOfMonthIterableOf(final Year year,
+															final MonthOfYear monthOfYear) {
+		return new Iterable<DayOfMonth>() {
+						@Override
+						public Iterator<DayOfMonth> iterator() {
+							return new Iterator<DayOfMonth>() {
+											private int _curr = -1;
+
+											@Override
+											public boolean hasNext() {
+												LocalDate endOfMonth = new LocalDate(year.asInteger(),monthOfYear.asInteger(),1)
+																				.dayOfMonth().withMaximumValue();
+												return _curr < endOfMonth.getDayOfMonth();
+											}
+											@Override
+											public DayOfMonth next() {
+												if (!this.hasNext()) throw new IllegalStateException();
+												_curr = _curr == -1 ? 0
+																	: _curr + 1;
+												return DayOfMonth.of(_curr);
+											}
+											@Override
+											public void remove() {
+												throw new UnsupportedOperationException();
+											}
+								   };
+						}
+			   };
+	}
+/////////////////////////////////////////////////////////////////////////////////////////
 //  EQUALS & HASHCODE
 /////////////////////////////////////////////////////////////////////////////////////////
 	@Override
@@ -134,11 +183,11 @@ public class DayOfMonth
 	}
 	@Override
 	public int hashCode() {
-		return new Integer(_dayOfMonth).hashCode();
+		return Integer.valueOf(_dayOfMonth).hashCode();
 	}
 	@Override
 	public int compareTo(final DayOfMonth other) {
-		return new Integer(this.asInteger())
-						.compareTo(new Integer(other.asInteger()));
+		return Integer.valueOf(this.asInteger())
+						.compareTo(Integer.valueOf(other.asInteger()));
 	}
 }
