@@ -3,6 +3,7 @@ package r01f.types.datetime;
 import java.io.Serializable;
 import java.util.Calendar;
 import java.util.Date;
+import java.util.Iterator;
 
 import com.google.common.annotations.GwtIncompatible;
 import com.google.common.base.Preconditions;
@@ -18,26 +19,31 @@ import r01f.util.types.Strings;
 @MarshallType(as="secondOfMinute")
 @GwtIncompatible
 @Accessors(prefix="_")
-public class SecondOfMinute 
+public class SecondOfMinute
   implements Serializable,
   			 CanBeRepresentedAsString,
   			 Comparable<SecondOfMinute> {
 
 	private static final long serialVersionUID = 5446927630549647342L;
 /////////////////////////////////////////////////////////////////////////////////////////
-//  
+//
 /////////////////////////////////////////////////////////////////////////////////////////
 	@Getter private int _secondOfMinute;
 /////////////////////////////////////////////////////////////////////////////////////////
-//  
+//  REGEX
+/////////////////////////////////////////////////////////////////////////////////////////
+	public static final String REGEX = "([0-5][0-9])";
+	public static final String REGEX_NOCAPTURE = "[0-5][0-9]";
+/////////////////////////////////////////////////////////////////////////////////////////
+//
 /////////////////////////////////////////////////////////////////////////////////////////
    public static boolean canBe(final String str) {
-         return Strings.isNOTNullOrEmpty(str) 
+         return Strings.isNOTNullOrEmpty(str)
              && Numbers.isInteger(str)
              && Integer.parseInt(str) >= 0 && Integer.parseInt(str) < 60;
    }
 /////////////////////////////////////////////////////////////////////////////////////////
-//  
+//
 /////////////////////////////////////////////////////////////////////////////////////////
 	public SecondOfMinute(final int secondOfMinute) {
 		_set(secondOfMinute);
@@ -45,7 +51,7 @@ public class SecondOfMinute
 	public SecondOfMinute(final Integer secondOfMinute) {
 		_set(secondOfMinute);
 	}
-	public SecondOfMinute(final String month) { 
+	public SecondOfMinute(final String month) {
 		int m = Integer.parseInt(month);
 		_set(m);
 	}
@@ -65,14 +71,14 @@ public class SecondOfMinute
 		return new SecondOfMinute(secondOfMinute);
 	}
 /////////////////////////////////////////////////////////////////////////////////////////
-//  
+//
 /////////////////////////////////////////////////////////////////////////////////////////
 	private void _set(final int secondOfMinute) {
 		Preconditions.checkArgument(secondOfMinute < 60 || secondOfMinute >= 0,"Not a valid second of minute");
-		_secondOfMinute = secondOfMinute;		
+		_secondOfMinute = secondOfMinute;
 	}
 /////////////////////////////////////////////////////////////////////////////////////////
-//  
+//
 /////////////////////////////////////////////////////////////////////////////////////////
 	@Override
 	public String toString() {
@@ -86,7 +92,7 @@ public class SecondOfMinute
 		return _secondOfMinute;
 	}
 /////////////////////////////////////////////////////////////////////////////////////////
-//  
+//
 /////////////////////////////////////////////////////////////////////////////////////////
 	public boolean is(final SecondOfMinute other) {
 		return _secondOfMinute == other.asInteger();
@@ -107,6 +113,35 @@ public class SecondOfMinute
 		return _secondOfMinute >= other.asInteger();
 	}
 /////////////////////////////////////////////////////////////////////////////////////////
+//	ITERABLE
+/////////////////////////////////////////////////////////////////////////////////////////
+	public static Iterable<SecondOfMinute> yearMonthsIterable() {
+		return new Iterable<SecondOfMinute>() {
+						@Override
+						public Iterator<SecondOfMinute> iterator() {
+							return new Iterator<SecondOfMinute>() {
+											private int _curr = -1;
+
+											@Override
+											public boolean hasNext() {
+												return _curr < 60;
+											}
+											@Override
+											public SecondOfMinute next() {
+												if (!this.hasNext()) throw new IllegalStateException();
+												_curr = _curr == -1 ? 0
+																	: _curr + 1;
+												return SecondOfMinute.of(_curr);
+											}
+											@Override
+											public void remove() {
+												throw new UnsupportedOperationException();
+											}
+								   };
+						}
+			   };
+	}
+/////////////////////////////////////////////////////////////////////////////////////////
 //  EQUALS & HASHCODE
 /////////////////////////////////////////////////////////////////////////////////////////
 	@Override
@@ -118,11 +153,11 @@ public class SecondOfMinute
 	}
 	@Override
 	public int hashCode() {
-		return new Integer(_secondOfMinute).hashCode();
+		return Integer.valueOf(_secondOfMinute).hashCode();
 	}
 	@Override
 	public int compareTo(final SecondOfMinute other) {
-		return new Integer(this.asInteger())
-						.compareTo(new Integer(other.asInteger()));
+		return Integer.valueOf(this.asInteger())
+						.compareTo(Integer.valueOf(other.asInteger()));
 	}
 }
