@@ -14,7 +14,7 @@ import r01f.objectstreamer.annotations.MarshallType;
 @ConvertToDirtyStateTrackable
 @Accessors(prefix="_")
 @NoArgsConstructor @AllArgsConstructor
-public class WeightedLangIndependentTag 
+public class WeightedLangIndependentTag
   implements Comparable<WeightedLangIndependentTag> {
 /////////////////////////////////////////////////////////////////////////////////////////
 //  FIELDS
@@ -22,7 +22,7 @@ public class WeightedLangIndependentTag
   	@MarshallField(as="tag",
   				   whenXml=@MarshallFieldAsXml(attr=true))
 	@Getter @Setter private String _tag;
-  
+
   	@MarshallField(as="weight",
   				   whenXml=@MarshallFieldAsXml(attr=true))
   	@Getter @Setter private int _weight;
@@ -32,18 +32,18 @@ public class WeightedLangIndependentTag
   	@Override
 	public int compareTo(final WeightedLangIndependentTag other) {
 	    if (other == null) return 1;
-	    
+
 	    int outComp = 0;
 	    if (this.getTag() != null && other.getTag() != null) {
 	    	int tagComp = this.getTag().compareTo(other.getTag());
-	    	outComp = tagComp == 0 ? new Integer(this.getWeight()).compareTo(new Integer(other.getWeight()))
+	    	outComp = tagComp == 0 ? Integer.valueOf(this.getWeight()).compareTo(Integer.valueOf(other.getWeight()))
 	    						   : tagComp;
 	    } else if (this.getTag() != null && other.getTag() == null) {
 	    	outComp = 1;
 	    } else if (this.getTag() == null && other.getTag() != null) {
 	    	outComp = -1;
 	    } else {
-	    	outComp = new Integer(this.getWeight()).compareTo(new Integer(other.getWeight()));
+	    	outComp = Integer.valueOf(this.getWeight()).compareTo(Integer.valueOf(other.getWeight()));
 	    }
 		return outComp;
 	}
