@@ -183,7 +183,7 @@ public class KrbApRep {
         Integer seqno = null;
 
         if (seqNumber != null)
-            seqno = new Integer(seqNumber.current());
+            seqno = Integer.valueOf(seqNumber.current());
 
         encPart = new EncAPRepPart(ctime,
                                    cusec,
